--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    font-family:'montseratt', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app{
+    height: 900px;
+    background-image: url("./assests/bg-cold.png");
+    background-size: cover;
+    transition: 0.4 ease;
+}
+.app.warm{
+    background-image: url("./assests/bg-warm.png");
+}
+main{
+    min-height: 100%;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
+    padding: 25px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.search-box{
+width: 100%;
+    margin: 0 0 75px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.search-box .search-bar{
+    display: block;
+    width: 100%;
+    padding: 15px;
+
+    appearance: none;
+    background: none;
+    border: none;
+    outline: none;
+
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 0px 0px 16px 16px;
+    margin-top: -25px;
+    box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+    color: #313131;
+    font-size: 20px;
+    transition: 0.4 ease;
+}
+.search-box .search-bar:focus{
+    background-color: rgba(255, 255, 255, 0.75);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.location-box .location{
+    color: #ffffff;
+    font-size: 32px;
+    text-align: center;
+    font-weight: 500;
+    text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+
+}
+
+.location-box .date{
+    color: #ffffff;
+    font-size: 20px;
+    text-align: center;
+    font-weight: 300;
+    text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+
+.weather-box{
+    text-align: center;
+}
+
+.weather-box .temp{
+    position: relative;
+    display: inline-block;
+    margin: 30px auto;
+    background-color: rgba(255, 255, 255, 0.2);
+    padding: 15px 25px;
+    color: #ffffff;
+    font-weight: 90;
+    font-size: 102px;
+    border-radius: 16px;
+    text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+    text-align: center;
+    box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+}
+.weather-box .weather{
+    color: #ffffff;
+    font-size: 48px;
+    font-weight: 700;
+    text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
 }
